--- a/index.html
+++ b/index.html
@@ -1,5 +1,41 @@
 <html>
-<title></title>
+    <head>
+      <title></title>  
+<style>
+    body{
+    margin: 0;
+    font-family: sans-serif;
+    background-color: #c4c4c4;
+}
+header{
+    padding: 20px;
+    background-color: #c4c4c4;
+}
+nav a {
+    color: rgb(201, 231, 30);
+    background-color: rgba(0, 0, 0, 0.89);
+    border-radius: 15px;
+    font-size: 30px;
+    text-decoration: none;
+    padding: 5px;
+    margin-left: 40px;
+    text-align: center;
+}
+
+h1{
+    text-align: center;
+    color: rgb(243, 228, 14);
+}
+main img{
+    width: 200px;
+    height: 150px;
+      border: 3px solid rgb(243, 228, 14);
+    border-radius: 16px;
+    margin: 16px;
+}
+
+</style>
+    </head>
 
 <body>
     <header>
@@ -21,14 +57,27 @@
          За 24 роки виробництва було виготовлено загалом 129 346 вантажівок.</p>
          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhlGzt5lyhgnLTG4JBzNtV5oSE3EN1YPSjLg&s">
          <p>Витрата палива Renault Magnum Євро 5 може варіюватися в залежності від різних факторів, але в середньому становить 30-40 літрів на 100 кілометрів для вантажівок 18 тонн. Для більш потужних моделей, таких як Magnum 480, витрата може досягати 36.5-41.9 літрів на 100 км. Точні цифри можуть відрізнятися в залежності від умов експлуатації, стилю водіння та технічного стану автомобіля.</p>
-         <img src="https://a2goos.com/data_images/galleryes/renault-premium/renault-premium-08.jpg"/>
+         <img src="https://a2goos.com/data_images/galleryes/renault-premium/renault-premium-08.jpg">
 
          
         <p>Renault Premium — це сімейство вантажних автомобілів, що виробляються компанією Renault Trucks з 1996 року між середньотоннажним Midlum і великотоннажним Kerax.</p>
+        <p>Renault Premium оснащувався трьома різними 6-ти цілінровими двигунами об'ємом 6,2 л MIDR 06.02 (209—250 к.с.), 9,8 л MIDR 06.20 (256—339 к.с.) і 11,1 л MIDR 06.23 (381—412 к.с.), коробками з числом передач 6-18, у тому числі з автоматизованим управлінням, дисковими гальмами з АБС, на замовлення — пневматичною підвіскою. Автомобіль виготовлявся з двома видами висоти кабіни зі спальним місцем, а також з кабіною без спального місця.</p>
     </main>
     <footer>
         <h2>Адреса:</h2>
         <h2>Франція авто-салон у місті Бленвіль-сюр-Орн</h2>
+        <section style="background-color: #ffe0b3; padding: 30px; border-radius: 15px; margin-bottom: 40px; box-shadow: 0 0 15px rgba(255,165,0,0.2);">
+            <h2 style="color: #e67e22; font-size: 2.8em; margin-bottom: 20px;">Про Мене - Тимофій Олексин</h2>
+            <p style="font-size: 1.3em; line-height: 1.6; color: #555;">
+                Привіт! Мене звати Тимофій. Мені 10, і я просто обожнюю вантажівки! Особливо ці великі, потужні Renault. Я мрію стати водієм вантажівки або, може, інженером, який їх проектує! Сподіваюся, мій сайт тобі сподобався! Це було круто його робити! 
+            </p>
+        </section>
+            <section style="background-color: #ffe0b3; padding: 30px; border-radius: 15px; margin-bottom: 40px; box-shadow: 0 0 15px rgba(255,165,0,0.2);">
+            <h2 style="color: #e67e22; font-size: 2.8em; margin-bottom: 20px;">Про Мене - Тимофій Олексин</h2>
+            <p style="font-size: 1.3em; line-height: 1.6; color: #555;">
+                Привіт! Мене звати Тимофій. Мені 10, і я просто обожнюю вантажівки! Особливо ці великі, потужні Renault.  Сподіваюся, мій сайт тобі сподобався! Це було круто його робити! 
+            </p>
+        </section>
       
     </footer>
 </body>
