--- a/index3.html
+++ b/index3.html
@@ -138,9 +138,9 @@ footer a {
     <body>
         <header>
          <h1> <img class="logo" src="https://learn.logikaschool.com/uploads/student/2898080/6877d0fb683f1.png"> <br/>
-Школа сноубордингу</h1>
+Школа сноубордингу Олександр</h1>
          <nav>
-          <a href="">Тарифи від 1000 грн</a>
+          <a href="">Тарифи від 2000 грн</a>
           <a href="">Кращі Тренери</a> 
           <a href="">Круті доріжки</a>
           <a href="" class="contacts">Контакти</a>
@@ -148,7 +148,7 @@ footer a {
         </header>
         <main>
             <section class="snowboarding-school-section">
-                <h2>Школа Сноубордингу матео
+                <h2>Школа Сноубордингу 
                 </h2>
                 <p>
                     ми тринуємо кращіх із всіх спорсменів в краініь 
