--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     margin: 0;
     font-family: sans-serif;
     background-color: #c4c4c4;
+    text-align: center;
 }
 header{
     padding: 20px;
