feat: add width

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ main img{
       border: 3px solid rgb(243, 228, 14);
     border-radius: 16px;
     margin: 16px;
+    max-width: 200px;
 }
 .about-me-section {
     text-align: center;
